--- a/spawn/client/main.html
+++ b/spawn/client/main.html
@@ -1,6 +1,7 @@
 <head>
   <title>Spawn</title>
 </head>
+
 <body>
   <div class="container">
   <header class="navbar navbar-default" role="navigation"> 
@@ -12,4 +13,16 @@
     <!-- {{> postsList}} -->
   </div>
   </div>
+
+    {{> login}}
 </body>
+
+<template name="login">
+    {{#if currentUser}}
+        {{currentUser.services.facebook.name}} -
+        {{currentUser.services.facebook.gender}}
+        <button id="logout">Logout</button>
+    {{else}}
+        <button id="facebook-login" class="btn btn-default"> Login with Facebook</button>
+    {{/if}}
+</template>
