--- a/spawn/client/main.html
+++ b/spawn/client/main.html
@@ -8,6 +8,26 @@
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Spawn</a>
     </div>
+    <header>
+      <h1>EthanfasdfG's Awesome Todo List ;)</h1>
+      {{> loginButtons}}
+<label class="hide-completed">
+        <input type="checkbox" checked="{{hideCompleted}}" />
+        Hide Completed Tasks ({{countTasks}})
+      </label>
+
+      {{#if currentUser}}
+      <form class="new-task">
+    <input type="text" name="text" placeholder="Type to add new tasks" />
+  </form>
+    {{/if}}
+    </header>
+
+    <ul>
+      {{#each tasks}}
+        {{> task}}
+      {{/each}}
+    </ul>
   </header>
   <div id="main">
     <!-- {{> postsList}} -->
@@ -15,6 +35,8 @@
   </div>
 
     {{> login}}
+
+
 </body>
 
 <template name="login">
@@ -25,4 +47,24 @@
     {{else}}
         <button id="facebook-login" class="btn btn-default"> Login with Facebook</button>
     {{/if}}
+</template>
+
+<template name="task">
+  <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
+    <button class="delete">&times;</button>
+
+    <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
+
+{{#if isOwner}}
+      <button class="toggle-private">
+        {{#if private}}
+          Private
+        {{else}}
+          Public
+        {{/if}}
+      </button>
+    {{/if}}
+
+    <span class="text">{{username}}: {{text}}</span>
+  </li>
 </template>
