--- a/spawn/client/addEvent.html
+++ b/spawn/client/addEvent.html
@@ -1,19 +1,19 @@
-<template name="task">
+<template name="addEvent">
   <div id="main">
     <h1>+ Spawn</h1>
-    <form class="new-task">
+    <form>
       Name:
       <input type="text" name="eventName" placeholder="Type to add new tasks" />
       <br>
-      <input type="radio" name="visibility" value="public" checked> public
+      <input type="radio" name="eventVisibility" value="public" checked> public
       <br>
-      <input type="radio" name="visibility" value="private"> private
+      <input type="radio" name="eventVisibility" value="private"> private
       <br>
       Description:
-      <input type="" name="eventDescription" placeholder="Type to add new tasks" />
+      <input type="text" name="eventDescription" placeholder="Type to add new tasks" />
       <br>
       Time:
-      <input type="time" name="usr_time">
+      <input type="time" name="eventTime">
       <br>
       <input type="submit">
     </form>
