added event list display using data from mongo

--- a/spawn/client/addEvent.html
+++ b/spawn/client/addEvent.html
@@ -17,5 +17,11 @@
       <br>
       <input type="submit">
     </form>
+
+    <ul>
+      {{#each tasks}}
+        {{> event}}
+      {{/each}}
+    </ul>
   </div>
 </template>
