cleaned up navigation, file structure, and margins, and added additional routing for viewing events

--- a/spawn/client/main.html
+++ b/spawn/client/main.html
@@ -2,14 +2,14 @@
   <title>Spawn</title>
 </head>
 
-<body>
+<!-- <body>
   <div class="container">
   <header class="navbar navbar-default" role="navigation"> 
     <div class="navbar-header">
       <a class="navbar-brand" href="/">Spawn</a>
+      <span class="navbar-brand">{{> login}}</span>
     </div>
   </header>
   </div>
-
-    {{> login}}
-</body>
+<h2>Loading...</h2>
+</body> -->
