--- a/spawn/client/main.html
+++ b/spawn/client/main.html
@@ -1,6 +1,8 @@
 
 
 <head>
-  <title>Spawn</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
+    <title>Spawn</title>
     <!-- // Add a favicon -->
 </head>
