--- a/spawn/client/main.html
+++ b/spawn/client/main.html
@@ -4,4 +4,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spawn</title>
     <!-- // Add a favicon -->
+    <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
 </head>
